--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+12.08.2005
+- Updated libgadu with fix of security problems - GNU TLS patch applied (gadu-gadu/THrull)
+- Added more user-friendly configure script error messages (do not kill me for that) (THrull)
+
 01.08.2005
 - Modified status description wrapping functionality, so that it works on
 UTF-8 strings; Fixed a memory leak. (GUI/mkobierzycki)
